--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css"
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" >
+    <link href="https://fonts.googleapis.com/css?family=Fresca|Lato|Merriweather" rel="stylesheet">
   </head>
   <body>
     <div class="onepager">
